@@ -1,4 +1,4 @@
-$Id: History,v 1.12 1999-05-24 18:35:35 gcosmo Exp $
+$Id: History,v 1.13 1999-05-24 20:39:12 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,8 @@ May 24th G.Cosmo (global-01-00-03)
   RW/STL headers. (F.Benher)
 - Introduced G4Types.hh and replaced basic types definitions in globals.hh
   and G4Timer.hh.
+- Added inclusion of G4Timer.hh in globals.hh to get rid of clashes about the
+  order of inclusion. G4Timer.hh must appear -before- STL's <algorithm>.
 
 May 19th G.Cosmo (global-01-00-02)
 - templates.hh: added definition of DBL_EPSILON and FLT_EPSILON.
